<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/settings_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_tip1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/settings_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_register_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/settings_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_register_button" />

            <TextView
                android:id="@+id/settings_registered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_registered_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/settings_registered_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_login" />

            <TextView
                android:id="@+id/settings_restore_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_restore_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/settings_restore_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_restore_button" />

            <LinearLayout
                android:layout_width="fill_parent"
				android:layout_height="fill_parent"
                android:gravity="bottom|center_horizontal" >

                <TextView
                    android:id="@+id/settings_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/settings_link"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>