<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TextView
 			    android:id="@+id/account_title"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="70sp"
 			    android:text="@string/account_title"
 			    android:layout_gravity="center_horizontal"
 			    android:textAppearance="?android:attr/textAppearanceLarge" 
 			    />
 			
        <TextView
 			    android:id="@+id/account_name"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="10sp"
 			    android:text="11111"
 			    android:layout_gravity="center_horizontal"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
       
	<RelativeLayout
        android:id="@+id/account_sync_container"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5sp"
		android:focusable="true"  
   		android:focusableInTouchMode="true"
        >

	        <Button
	            android:id="@+id/account_sync"
	            android:layout_width="150sp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:background="@drawable/selector_btn_blue"
	            android:gravity="center"
	            android:padding="5sp"
	            android:text="@string/account_sync"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#FFFFFF" />

	        <ImageView
	            android:id="@+id/account_sync_info"
	            android:layout_width="30sp"
	            android:layout_height="30sp"
	            android:layout_marginLeft="20sp"
	            android:layout_centerVertical="true"
	            android:layout_toRightOf="@+id/account_sync"
	            android:src="@drawable/information_dark" />

     </RelativeLayout>
             
	 <TextView
 		android:id="@+id/account_subscription_count"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="10sp"
 		android:text="You have 0 synced subscription(s)."
 		android:textColor="#008800"
 		android:layout_gravity="center_horizontal"
 		android:textAppearance="?android:attr/textAppearanceMedium" />

	<RelativeLayout
        android:id="@+id/account_logout_container"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20sp"
		android:focusable="true"  
   		android:focusableInTouchMode="true"
        >

	        <Button
	            android:id="@+id/account_logout"
	            android:layout_width="150sp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:background="@drawable/selector_btn_grey"
	            android:gravity="center"
	            android:padding="5sp"
	            android:text="@string/account_logout"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#FFFFFF" />

	        <ImageView
	            android:id="@+id/account_logout_info"
	            android:layout_width="30sp"
	            android:layout_height="30sp"
	            android:layout_marginLeft="20sp"
	            android:layout_centerVertical="true"
	            android:layout_toRightOf="@+id/account_logout"
	            android:src="@drawable/information_dark" />

     </RelativeLayout>
    
      <TextView
	            android:id="@+id/account_website"
	            android:layout_width="wrap_content"
	            android:layout_height="20sp"
	            android:layout_below="@id/account_logout_container"
	            android:layout_centerHorizontal="true"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="10sp"
	            android:text="@string/settings_link"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="#0000FF" />
	
</LinearLayout>