<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/registration_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_tip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <RelativeLayout
                android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_margin="10dp"
				android:focusable="true"  
   				android:focusableInTouchMode="true"
                >

 			<TextView
 			    android:id="@+id/registration_email"
 			    android:layout_width="100dp"
 			    android:layout_height="wrap_content"
 			    android:layout_alignParentLeft="true"
 			    android:layout_alignParentTop="true"
 			    android:layout_marginTop="10dp"
 			    android:text="@string/registration_email"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
 			
             <EditText
                 android:id="@+id/registration_email_enter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@id/registration_email"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:inputType="textEmailAddress"
                 
                 >
                 
             
             </EditText>

             <ImageView
                 android:id="@+id/registration_email_info"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@id/registration_email"
                 android:src="@drawable/information_dark" />

             <TextView
                 android:id="@+id/registration_email_error_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/registration_email_enter"
                 android:layout_toRightOf="@+id/registration_email"
                 android:textColor="#FF0000"
                 android:textSize="12dp"
                 />
                
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_margin="10dp"
				android:focusable="true"  
   				android:focusableInTouchMode="true"
                >

 			<TextView
 			    android:id="@+id/registration_password"
 			    android:layout_width="100dp"
 			    android:layout_height="wrap_content"
 			    android:layout_alignParentLeft="true"
 			    android:layout_alignParentTop="true"
 			    android:layout_marginTop="10dp"
 			    android:text="@string/registration_password"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
 			
             <EditText
                 android:id="@+id/registration_password_enter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@id/registration_password"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:inputType="textPassword"
                 android:maxLength="16"
                 >
                 
             
             </EditText>

             <ImageView
                 android:id="@+id/registration_password_info"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@id/registration_password"
                 android:src="@drawable/information_dark" />

             <TextView
                 android:id="@+id/registration_password_error_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/registration_password_enter"
                 android:layout_below="@+id/registration_password_enter"
                 android:textColor="#FF0000"
                 android:textSize="12dp"
                 />
                
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_margin="10dp"
				android:focusable="true"  
   				android:focusableInTouchMode="true"
                >

 			<TextView
 			    android:id="@+id/registration_repassword"
 			    android:layout_width="100dp"
 			    android:layout_height="wrap_content"
 			    android:layout_alignParentLeft="true"
 			    android:layout_alignParentTop="true"
 			    android:layout_marginTop="10dp"
 			    android:text="@string/registration_repassword"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
 			
             <EditText
                 android:id="@+id/registration_repassword_enter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@id/registration_repassword"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:inputType="textPassword"
                 android:maxLength="16"
                 >
                 
             
             </EditText>

             <TextView
                 android:id="@+id/registration_repassword_error_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/registration_repassword_enter"
                 android:layout_toRightOf="@+id/registration_repassword"
                 android:textColor="#FF0000"
                 android:textSize="12dp"
                 />
                
            </RelativeLayout>

            <Button
                android:id="@+id/Registration_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_blue"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/registration_submit"
                android:padding="5dp" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>