<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_info"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_gravity="right|center_vertical"
        android:src="@drawable/information_dark" />

     <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_margin="10sp"
		android:focusable="true"  
   		android:focusableInTouchMode="true"
        >
        <TextView
 			    android:id="@+id/login_email"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="10sp"
 			    android:text="@string/registration_email"
 			    android:layout_gravity="center_horizontal"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
 			
             <EditText
                 android:id="@+id/login_email_enter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
                 android:layout_marginLeft="10sp"
                 android:layout_marginRight="10sp"
                 android:layout_gravity="center_horizontal"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:inputType="textEmailAddress" >
            </EditText>

             <TextView
                 android:id="@+id/login_email_error_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10sp"
                 android:textColor="#FF0000"
                 android:textSize="12sp"
                  />

     </LinearLayout>
     
     <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_margin="10sp"
		android:focusable="true"  
   		android:focusableInTouchMode="true"
        >
        <TextView
 			    android:id="@+id/login_password"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
 			    android:text="@string/registration_password"
 			    android:layout_gravity="center_horizontal"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
 			
             <EditText
                 android:id="@+id/login_password_enter"
                 android:layout_width="200sp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
                 android:layout_gravity="center_horizontal"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:inputType="textPassword"
                 >
            </EditText>

             <TextView
                 android:id="@+id/login_password_error_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10sp"
                 android:textColor="#FF0000"
                 android:textSize="12sp"
                  />

     </LinearLayout>
     
     <Button
     	android:id="@+id/login_submit"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_blue"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#FFFFFF"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_submit"
        android:padding="5sp" />
</LinearLayout>